fix: Carousel spacing

--- a/components/app/home/menu/panels/info/info.module.scss
+++ b/components/app/home/menu/panels/info/info.module.scss
@@ -16,7 +16,11 @@
   }
 
   &__carousel {
-    padding-top: 32px;
+    margin-top: 16px;
+
+    @media screen and (min-width: $global-breakpoint-md) {
+      margin-top: 0;
+    }
   }
 
   @media screen and (max-width: $global-breakpoint-md) {
